<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_baseline_search_24"
        android:iconTint="@color/white"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom" />

    <group android:checkableBehavior="single">
        <item android:id="@+id/menu_sortBy"
            android:title="@string/sort_by">
            <menu>
               <item android:id="@+id/menu_priority_high"
                   android:title="@string/high_priority"/>
                <item android:id="@+id/menu_priority_low"
                    android:title="@string/low_priority"/>
            </menu>
        </item>
    </group>

    <item android:id="@+id/action_delete_all"
        android:icon="@drawable/ic_baseline_delete_24"
        android:iconTint="@color/white"
        android:title="@string/delete_all"
        app:showAsAction="never"/>
</menu>